--- a/HW/hw2_release/hw2- R.ipynb
+++ b/HW/hw2_release/hw2- R.ipynb
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -669,27 +669,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## S3 method for class 'bn'\n",
+    "\n",
     "samples <- rbn(model, n =50000)\n",
-    "samples_b_on_c_on <- subset(samples, (B == 'on' & C=='on'))\n",
-    "## S3 method for class 'bn.fit'\n",
-    "# rbn(x, n = 1, ..., debug = FALSE)"
+    "samples_b_on_c_on <- subset(samples, (B == 'on' & C=='on'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1] 0.27032\n"
+      "[1] 0.26962\n"
      ]
     }
    ],
@@ -896,7 +894,7 @@
    "source": [
     "samples_intervention <- rbn(intervention_graph, n =50000)\n",
     "samples_do_b_on_c_on <- subset(samples_intervention, (B == 'on' & C=='on'))\n",
-    "print(nrow(subset(samples_do_b_on_c_on, (A == 'on')))/nrow(samples_intervention))"
+    "print(nrow(subset(samples_do_b_on_c_on, (A == 'on')))/nrow(samples_intervention))\n"
    ]
   },
   {
@@ -904,6 +902,74 @@
    "metadata": {},
    "source": [
     "P (A = on | do(B = on), C = on) calculated with rejection sampling is 0.30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dag <- empty.graph(nodes = c(\"A\",\"S\",\"E\",\"O\",\"R\",\"T\"))\n",
+    "arc.set <- matrix(c(\"A\", \"E\",\n",
+    "                    \"S\", \"E\",\n",
+    "                    \"E\", \"O\",\n",
+    "                    \"E\", \"R\",\n",
+    "                    \"O\", \"T\",\n",
+    "                    \"R\", \"T\"),\n",
+    "                  byrow = TRUE, ncol = 2,\n",
+    "                  dimnames = list(NULL, c(\"from\", \"to\")))\n",
+    "arcs(dag) <- arc.set\n",
+    "A.lv <- c(\"young\", \"adult\", \"old\")\n",
+    "S.lv <- c(\"M\", \"F\")\n",
+    "E.lv <- c(\"high\", \"uni\")\n",
+    "O.lv <- c(\"emp\", \"self\")\n",
+    "R.lv <- c(\"small\", \"big\")\n",
+    "T.lv <- c(\"car\", \"train\", \"other\")\n",
+    "A.prob <- array(c(0.3,0.5,0.2), dim = 3, dimnames = list(A = A.lv))\n",
+    "S.prob <- array(c(0.6,0.4), dim = 2, dimnames = list(S = S.lv))\n",
+    "E.prob <- array(c(0.75,0.25,0.72,0.28,0.88,0.12,0.64,0.36,0.70,0.30,0.90,0.10), dim = c(2,3,2), dimnames = list(E = E.lv, A = A.lv, S = S.lv))\n",
+    "O.prob <- array(c(0.96,0.04,0.92,0.08), dim = c(2,2), dimnames = list(O = O.lv, E = E.lv))\n",
+    "R.prob <- array(c(0.25,0.75,0.2,0.8), dim = c(2,2), dimnames = list(R = R.lv, E = E.lv))\n",
+    "T.prob <- array(c(0.48,0.42,0.10,0.56,0.36,0.08,0.58,0.24,0.18,0.70,0.21,0.09), dim = c(3,2,2), dimnames = list(T = T.lv, O = O.lv, R = R.lv))\n",
+    "cpt <- list(A = A.prob, S = S.prob, E = E.prob, O = O.prob, R = R.prob, T = T.prob)\n",
+    "bn <- custom.fit(dag, cpt)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "  Parameters of node E (multinomial distribution)\n",
+       "\n",
+       "Conditional probability table:\n",
+       " \n",
+       ", , S = M\n",
+       "\n",
+       "      A\n",
+       "E      young adult  old\n",
+       "  high  0.75  0.72 0.88\n",
+       "  uni   0.25  0.28 0.12\n",
+       "\n",
+       ", , S = F\n",
+       "\n",
+       "      A\n",
+       "E      young adult  old\n",
+       "  high  0.64  0.70 0.90\n",
+       "  uni   0.36  0.30 0.10\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "bn$E"
    ]
   },
   {
