--- a/HW/hw2_release/hw2-pyro.ipynb
+++ b/HW/hw2_release/hw2-pyro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,16 +44,16 @@
     "    A_probs = torch.tensor([0.5, 0.5])\n",
     "\n",
     "    B_probs = torch.tensor([\n",
-    "            [0.8, 0.1],\n",
-    "            [0.2, 0.9]\n",
+    "            [0.8, 0.2],\n",
+    "            [0.1, 0.9]\n",
     "    ]) \n",
     "    C_probs = torch.tensor([\n",
-    "            [[0.90, 0.99], [0.10, 0.01]],\n",
-    "            [[0.10, 0.408], [0.90, 0.60]]])\n",
+    "            [[0.90, 0.10], [0.99, 0.01]],\n",
+    "            [[0.10, 0.9], [0.40, 0.60]]])\n",
     "\n",
     "\n",
     "    A = pyro.sample(\"A\", pyro.distributions.Categorical(probs=A_probs)) \n",
-    "    B = pyro.sample(\"B\",  pyro.distributions.Categorical(probs=B_probs)) \n",
+    "    B = pyro.sample(\"B\",  pyro.distributions.Categorical(probs=B_probs[A])) \n",
     "    C = pyro.sample(\"C\", pyro.distributions.Categorical(probs=C_probs[B][A]))\n",
     "\n",
     "    return{'A': A,\n",
@@ -64,28 +64,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# intervened_model = pyro.poutine.do(model, data={\"B\": torch.tensor(1.), \"C\": torch.tensor(1.)})\n",
     "\n",
-    "intervened_model = pyro.do( pyro.condition(model, data={'C':torch.tensor(1) } ), data={'B':torch.tensor(1) } )  \n",
+    "intervened_model = pyro.condition( pyro.do( model, data={'B': torch.tensor(1) } ), data={'C': torch.tensor(1) } )\n",
     "conditioned_model = pyro.condition(model,  data={\"B\": torch.tensor(1), \"C\": torch.tensor(1)})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.331"
+       "0.3954"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,12 +95,7 @@
     "samples_intervened = [marginal_intervened().item() for _ in range(5000)]\n",
     "unique_intervened, counts_intervened = np.unique(samples_intervened, return_counts=True)\n",
     "p_a_doB = counts_intervened[1]/counts_intervened.sum()\n",
-    "p_a_doB\n",
-    "# plt.bar(t_unique, t_counts, align='center', alpha=0.5)\n",
-    "# plt.xticks(t_unique, ['car','train','other'])\n",
-    "# plt.ylabel('count')\n",
-    "# plt.xlabel('Transport')\n",
-    "# plt.title('P(T | E=\"uni\") - Importance Sampling')"
+    "p_a_doB"
    ]
   },
   {
@@ -146,16 +140,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.331"
+       "0.3988"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
