--- a/HW/hw2_release/hw2- R.ipynb
+++ b/HW/hw2_release/hw2- R.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -216,12 +216,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1b. Redundant example : node1 d-separated from node2 given node3 => node1 d-separated from node2 given node3 + any of node3's children"
+    "1b. Redundant example : node1 d-separated from node2 given node3 => node1 d-separated from node2 given node3 + any of node3's children, e.g. \"A\" and \"O\" are d-separated given E, redudnat statements are any other children of E, e.g. \"A\" and \"O\" are d-separated given E and R"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -230,55 +230,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1] \"E\" \"E\" \"R\"\n",
-      "[1] \"E\" \"E\" \"S\"\n",
-      "[1] \"E\" \"E\" \"T\"\n",
-      "[1] \"E\" \"E\" \"R\" \"S\"\n",
-      "[1] \"E\" \"E\" \"R\" \"T\"\n",
-      "[1] \"E\" \"E\" \"S\" \"T\"\n",
-      "[1] \"E\" \"E\" \"R\" \"S\" \"T\"\n",
-      "[1] \"E\" \"E\" \"O\"\n",
-      "[1] \"E\" \"E\" \"S\"\n",
-      "[1] \"E\" \"E\" \"T\"\n",
-      "[1] \"E\" \"E\" \"O\" \"S\"\n",
-      "[1] \"E\" \"E\" \"O\" \"T\"\n",
-      "[1] \"E\" \"E\" \"S\" \"T\"\n",
-      "[1] \"E\" \"E\" \"O\" \"S\" \"T\"\n",
-      "[1] \"E\" \"E\" \"O\"\n",
-      "[1] \"E\" \"E\" \"R\"\n",
-      "[1] \"E\" \"E\" \"S\"\n",
-      "[1] \"E\" \"O\" \"R\"\n",
-      "[1] \"E\" \"E\" \"O\" \"R\"\n",
-      "[1] \"E\" \"E\" \"O\" \"S\"\n",
-      "[1] \"E\" \"E\" \"R\" \"S\"\n",
-      "[1] \"E\" \"O\" \"R\" \"S\"\n",
-      "[1] \"E\" \"E\" \"O\" \"R\" \"S\"\n",
-      "[1] \"E\" \"A\" \"E\"\n",
-      "[1] \"E\" \"E\" \"S\"\n",
-      "[1] \"E\" \"A\" \"E\" \"S\"\n",
-      "[1] \"E\" \"A\" \"E\"\n",
-      "[1] \"E\" \"E\" \"R\"\n",
-      "[1] \"E\" \"E\" \"T\"\n",
-      "[1] \"E\" \"A\" \"E\" \"R\"\n",
-      "[1] \"E\" \"A\" \"E\" \"T\"\n",
-      "[1] \"E\" \"E\" \"R\" \"T\"\n",
-      "[1] \"E\" \"A\" \"E\" \"R\" \"T\"\n",
-      "[1] \"E\" \"A\" \"E\"\n",
-      "[1] \"E\" \"E\" \"O\"\n",
-      "[1] \"E\" \"E\" \"T\"\n",
-      "[1] \"E\" \"A\" \"E\" \"O\"\n",
-      "[1] \"E\" \"A\" \"E\" \"T\"\n",
-      "[1] \"E\" \"E\" \"O\" \"T\"\n",
-      "[1] \"E\" \"A\" \"E\" \"O\" \"T\"\n",
-      "[1] \"E\" \"A\" \"E\"\n",
-      "[1] \"E\" \"E\" \"O\"\n",
-      "[1] \"E\" \"E\" \"R\"\n",
-      "[1] \"E\" \"O\" \"R\"\n",
-      "[1] \"E\" \"A\" \"E\" \"O\"\n",
-      "[1] \"E\" \"A\" \"E\" \"R\"\n",
-      "[1] \"E\" \"A\" \"O\" \"R\"\n",
-      "[1] \"E\" \"E\" \"O\" \"R\"\n",
-      "[1] \"E\" \"A\" \"E\" \"O\" \"R\"\n"
+      "[1] \"redundant: (1 imples 2)\"\n",
+      "[1] \"set1\"\n",
+      "[1] \"A\" \",\" \"T\" \",\" \"E\"\n",
+      "[1] \"set2\"\n",
+      "[1] \"A\" \",\" \"T\" \",\" \"E\" \"O\" \"R\"\n",
+      "[1] \"redundant: (1 imples 2)\"\n",
+      "[1] \"set1\"\n",
+      "[1] \"A\" \",\" \"T\" \",\" \"E\"\n",
+      "[1] \"set2\"\n",
+      "[1] \"A\" \",\" \"T\" \",\" \"E\" \"O\" \"R\" \"S\"\n",
+      "[1] \"redundant: (1 imples 2)\"\n",
+      "[1] \"set1\"\n",
+      "[1] \"S\" \",\" \"T\" \",\" \"E\"\n",
+      "[1] \"set2\"\n",
+      "[1] \"S\" \",\" \"T\" \",\" \"E\" \"O\" \"R\"\n",
+      "[1] \"redundant: (1 imples 2)\"\n",
+      "[1] \"set1\"\n",
+      "[1] \"S\" \",\" \"T\" \",\" \"E\"\n",
+      "[1] \"set2\"\n",
+      "[1] \"S\" \",\" \"T\" \",\" \"A\" \"E\" \"O\" \"R\"\n"
      ]
     }
    ],
@@ -290,19 +261,36 @@
     "        for(j in (i+1):length(d_separated_sets)) {\n",
     "            end_set <- d_separated_sets[[j]]\n",
     "            if ((start_set$x == end_set$x) & (start_set$y == end_set$y)) {\n",
-    "                print(c(start_set$z, end_set$z))\n",
+    "                setdiff_nodes = setdiff(end_set$z, start_set$z)\n",
+    "                intersect_nodes = intersect(end_set$z, start_set$z)\n",
+    "                is_redundant <- FALSE\n",
+    "                for (node in intersect_nodes) {\n",
+    "                    children_of_node <- children(net, node) \n",
+    "                    if (length(setdiff(children_of_node, setdiff_nodes)) == 0 ){\n",
+    "                        print('redundant: (1 imples 2)')\n",
+    "                        print('set1')\n",
+    "                        print(c(start_set$x,',', start_set$y,',', start_set$z))\n",
+    "                        print('set2')\n",
+    "                        print(c(end_set$x, ',', end_set$y, ',',end_set$z))\n",
+    "                    }\n",
+    "                }\n",
     "            }\n",
-    "    #         print(c(start_set, end_set))\n",
-    "    #         print(setdiff(end_set$z , start_set$z))\n",
-    "    #         print(length(end_set))\n",
-    "    #         if((length(setdiff(end_set$z , start_set$z)) == 0) & (length(setdiff(start_set$z, end_set$z)) == 0) & (length(setdiff(end_set$x , start_set$y)) == 0) & (length(setdiff(start_set$y, end_set$x )) == 0)){\n",
-    "    #             redundant_sets <- c(redundant_sets, list(start_set), list(end_set))\n",
-    "    #             print('a')\n",
-    "    #             print(c(start_set, end_set))\n",
-    "    #         }\n",
+    "\n",
     "        }\n",
     "    }\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1c) the dseparation algorithm can be made more efficient by not testing all the redundant sets. e.g. if we know what set 1 node combination implies set 2 and set 3 and we found that set 1 is d-separated then we don't have to test set 2 and set 3"
    ]
   },
   {
@@ -314,14 +302,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1] \"Markov test\"\n",
+      "[1] \"Markov test: not true independence\"\n",
       "$x\n",
       "[1] \"A\"\n",
       "\n",
@@ -331,7 +319,7 @@
       "$z\n",
       "[1] \"E\" \"S\"\n",
       "\n",
-      "[1] \"Markov test\"\n",
+      "[1] \"Markov test: not true independence\"\n",
       "$x\n",
       "[1] \"A\"\n",
       "\n",
@@ -341,7 +329,7 @@
       "$z\n",
       "[1] \"E\" \"O\"\n",
       "\n",
-      "[1] \"Markov test\"\n",
+      "[1] \"Markov test: not true independence\"\n",
       "$x\n",
       "[1] \"O\"\n",
       "\n",
@@ -351,7 +339,7 @@
       "$z\n",
       "[1] \"A\" \"E\"\n",
       "\n",
-      "[1] \"Markov test\"\n",
+      "[1] \"Markov test: not true independence\"\n",
       "$x\n",
       "[1] \"O\"\n",
       "\n",
@@ -361,7 +349,7 @@
       "$z\n",
       "[1] \"E\" \"T\"\n",
       "\n",
-      "[1] \"Markov test\"\n",
+      "[1] \"Markov test: not true independence\"\n",
       "$x\n",
       "[1] \"S\"\n",
       "\n",
@@ -379,60 +367,10 @@
     "for( d_sep_set in d_separated_sets){\n",
     "    test_outcome <- ci.test(d_sep_set$x, d_sep_set$y,d_sep_set$z, survey)\n",
     "    if(test_outcome$p.value < 0.05) {\n",
-    "        print(\"Markov test\")\n",
+    "        print(\"Markov test: not true independence\")\n",
     "        print(d_sep_set)\n",
     "    }\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d_separated_sets <- list()\n",
-    "for(i in 1:length(arg_sets)) {\n",
-    "    arg_set <- arg_sets[[i]]\n",
-    "  # i-th element of `u1` squared into `i`-th position of `usq`\n",
-    "        if( d_sep(bn=net, x=arg_set$x, y=arg_set$y, z=arg_set$z)){\n",
-    "            d_separated_sets <- c(d_separated_sets, list(arg_set)) \n",
-    "        }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "net <- model2network('[A][S][E|A:S][O|E]')\n",
-    "nombres <- c('off', 'on')\n",
-    "cptA <- matrix(c(0.5, 0.5), ncol=2)\n",
-    "dimnames(cptA) <- list(NULL, nombres)\n",
-    "cptB <- matrix(c(.8, .2, .1, .9), ncol=2)\n",
-    "dimnames(cptB) <- list(B = nombres, A = nombres)\n",
-    "cptC <- matrix(c(.9, .1, .99, .01, .1, .9, .4, .6))\n",
-    "dim(cptC) <- c(2, 2, 2)\n",
-    "dimnames(cptC) <- list(C = nombres, A = nombres, B = nombres)\n",
-    "model <- custom.fit(net, list(A = cptA, B = cptB, C = cptC))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "?hc"
    ]
   },
   {
@@ -511,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -646,15 +584,15 @@
     "From probability table:\n",
     " ```\n",
     " P (C=on|B=on, A=on) = 0.6\n",
-    " P(B=on|A=on) = 0.1\n",
+    " P(B=on|A=on) = 0.9\n",
     " P(A=on)  = 0.5\n",
     " \n",
-    " P(C=on|B=on, A=on)P(B=on|A=on)P(A=on) = 0.03\n",
+    " P(C=on|B=on, A=on)P(B=on|A=on)P(A=on) = 0.27\n",
     " \n",
     " P(C=on|B=on, A=off)P(B=on|A=off)P(A=off) = 0.90  * 0.2  * 0.5 = 0.09\n",
-    " Sum_A(P (C|B, A)P(B|A)P(A)) = 0.03 + 0.09 = 0.12\n",
+    " Sum_A(P (C|B, A)P(B|A)P(A)) = 0.27 + 0.09 = 0.36\n",
     " \n",
-    " P (A = on | B = on, C = on) = 0.03/0.12 = 0.25\n",
+    " P (A = on | B = on, C = on) = 0.27/0.36 = 0.75\n",
     " \n",
     " ```\n",
     " "
@@ -669,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,27 +618,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1] 0.26962\n"
+      "[1] 0.7480524\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "print(nrow(subset(samples_b_on_c_on, (A == 'on')))/nrow(samples))"
+    "print(nrow(subset(samples_b_on_c_on, (A == 'on')))/nrow(samples_b_on_c_on))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "P (A = on | B = on, C = on) calculated with rejection sampling is 0.27"
+    "P (A = on | B = on, C = on) calculated with rejection sampling is 0.75"
    ]
   },
   {
@@ -712,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -865,43 +803,50 @@
    "metadata": {},
    "source": [
     "We want to calculate\n",
-    "`P (A = on | do(B = on), C = on) = p(A)P(B)P(C|A,B)`\n",
+    "`P (A = on | do(B = on), C = on) = p(A)P(B)P(C|A,B)/Sum_A(P (C|B, A)P(B)P(A))`\n",
     "\n",
     "From probability table:\n",
     " ```\n",
     " P (C=on|B=on, A=on) = 0.6\n",
     " P(B=on) = 1\n",
     " P(A=on)  = 0.5\n",
+    " p(A)P(B)P(C|A,B) = 0.30\n",
     " \n",
-    "P (A = on | do(B = on), C = on) = 0.6 * 0.5 = 0.30\n",
+    "\n",
+    "\n",
+    "P(C=on|B=on, A=off)P(B=on)P(A=off) = 0.90  * 1  * 0.5 = 0.45\n",
+    " Sum_A(P (C|B, A)P(B|A)P(A)) = 0.30 + 0.45 = 0.75\n",
     " \n",
+    " P (A = on | do(B = on), C = on) = 0.30/0.75 = 0.40\n",
     " ```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1] 0.2974\n"
+      "[1] 0.4034943\n"
      ]
     }
    ],
    "source": [
     "samples_intervention <- rbn(intervention_graph, n =50000)\n",
     "samples_do_b_on_c_on <- subset(samples_intervention, (B == 'on' & C=='on'))\n",
-    "print(nrow(subset(samples_do_b_on_c_on, (A == 'on')))/nrow(samples_intervention))\n"
+    "print(nrow(subset(samples_do_b_on_c_on, (A == 'on')))/nrow(samples_do_b_on_c_on))\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "P (A = on | do(B = on), C = on) calculated with rejection sampling is 0.30"
+    "P (A = on | do(B = on), C = on) calculated with rejection sampling is 0.40"
    ]
   },
   {
