--- a/HW/hw2_release/hw2-pyro.ipynb
+++ b/HW/hw2_release/hw2-pyro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,16 +13,6 @@
     "    warnings.filterwarnings(warning_status, category=DeprecationWarning)\n",
     "    warnings.filterwarnings(warning_status, category=UserWarning)\n",
     "\n",
-    "import numpy as np\n",
-    "import os\n",
-    "#@markdown This sets the styles of the plotting (default is styled like plots from [FiveThirtyeight.com](https://fivethirtyeight.com/)\n",
-    "matplotlib_style = 'fivethirtyeight' #@param ['fivethirtyeight', 'bmh', 'ggplot', 'seaborn', 'default', 'Solarize_Light2', 'classic', 'dark_background', 'seaborn-colorblind', 'seaborn-notebook']\n",
-    "import matplotlib.pyplot as plt; plt.style.use(matplotlib_style)\n",
-    "import matplotlib.axes as axes;\n",
-    "from matplotlib.patches import Ellipse\n",
-    "#%matplotlib inline\n",
-    "import seaborn as sns; sns.set_context('notebook')\n",
-    "\n",
     "import torch\n",
     "import torch.nn.functional as F\n",
     "import pyro\n",
@@ -32,15 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def model():\n",
-    "    A_alias = ['off', 'on']\n",
-    "    B_alias = ['off', 'on']\n",
-    "    C_alias = ['off', 'on']\n",
-    "\n",
     "    A_probs = torch.tensor([0.5, 0.5])\n",
     "\n",
     "    B_probs = torch.tensor([\n",
@@ -64,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,16 +61,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3954"
+       "0.4054"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,56 +86,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 1])"
+       "0.7564"
       ]
      },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p(A|do(B), C) = t_counts[1] / t_counts.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.3296"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    " t_counts[1] / t_counts.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.3988"
-      ]
-     },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,49 +104,26 @@
     "posterior_conditioned = pyro.infer.Importance(conditioned_model, num_samples=5000).run()\n",
     "marginal_conditioned = EmpiricalMarginal(posterior_conditioned, \"A\")\n",
     "samples_conditioned = [marginal_conditioned().item() for _ in range(5000)]\n",
-    "unique_conditioned, counts_conditioned = np.unique(samples_intervened, return_counts=True)\n",
+    "unique_conditioned, counts_conditioned = np.unique(samples_conditioned, return_counts=True)\n",
     "p_a_B = counts_conditioned[1]/counts_conditioned.sum()\n",
     "p_a_B"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([3345, 1655])"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P (A = on | B = on, C = on) = 0.7564 and P (A = on | do(B = on), C = on) = 0.4054\n"
+     ]
     }
    ],
    "source": [
-    "counts_conditioned"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([3345, 1655])"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "counts_intervened"
+    "print(f\"P (A = on | B = on, C = on) = {p_a_B} and P (A = on | do(B = on), C = on) = {p_a_doB}\")"
    ]
   },
   {
